Fix admin buttons visibility and improved popup edit, add htaccess

--- a/src/index.css
+++ b/src/index.css
@@ -279,6 +279,17 @@ h6 {
   color: var(--color-primary);
 }
 
+.btn-outline-primary {
+  border: 2px solid var(--color-primary);
+  color: var(--color-primary);
+  background-color: transparent;
+}
+
+.btn-outline-primary:hover {
+  background-color: var(--color-primary);
+  color: var(--color-white);
+}
+
 .btn-secondary {
   background-color: var(--color-primary);
   color: var(--color-white);
